# check-json5

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
pypackages/pre_commit_hooks/: check_json5.py
tests/: conftest.py  test_check_json5.py
tests/resources/: bad_json5_syntax.json5  duplicate_key.json5  nested_duplicate_key.json5  ok_json.json  ok_json5_multiline_string.json5  ok_json5_numbers.json5  ok_json5_unquoted_keys.json5  ok_json5_with_comments.json5  ok_json5_with_trailing_comma.json5
